--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,13 @@
 :root{
     --header-height: 3rem;
     --first-color: #2AD735;
+    --first-color-alt: hsl(124, 53%, 40%);
     --body-color: hsl(250, 60%, 99%);
     --container-color: #fff;
     --scroll-bar-color: hsl(250, 12%, 90%);
     --scroll-thumb-color: hsl(250, 12%, 80%);
     --text-color: hsl(250, 8%, 45%);
+    --title-color: hsl(250, 8%, 15%);
     --body-font: 'Poppins', sans-serif;
     --big-font-size: 2rem;
     --h1-font-size: 1.5rem;
@@ -81,4 +83,122 @@ img{
 
 .section{
     padding: 2rem 0 4rem;
+}
+
+.section_title{
+    font-size: var(--h1-font-size);
+}
+
+.section_subtitle{
+    display: block;
+    font-size: var(--small-font-size);
+    margin-bottom: var(--mb-3);
+}
+
+.section_title,
+.section_subtitle{
+    text-align: center;
+}
+
+.container{
+    max-width: 768px;
+    margin-left: var(--mb-1-5);
+    margin-right: var(--mb-1-5);
+}
+
+.grid{
+    display: grid;
+    gap: 1.5rem;
+}
+
+.s-primary{
+    color: #2AD735;
+}
+
+.header{
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: var(--z-fixed);
+    background-color: var(--body-color);
+}
+
+.nav{
+    max-width: 968px;
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav_logo,
+.nav_toggle{
+    color: var(--text-color);
+    font-weight: var(--font-medium);
+}
+
+.nav_toggle{
+    font-size: 1.1rem;
+    cursor: pointer;
+    transition: all ease .3s;
+}
+
+.nav_toggle:hover{
+    color: var(--first-color);
+}
+
+@media screen and  (max-width:767px){
+    .nav_menu{
+        position: fixed;
+        bottom: -100%;
+        left: 0;
+        width: 100%;
+        background-color: var(--body-color);
+        padding: 2rem 1.5rem 4rem;
+        box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
+        border-radius: 1.5rem 1.5rem 0 0;
+        transition: all ease .3s;
+    }
+}
+
+.nav_list{
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2em;
+}
+
+.nav_link{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: var(--small-font-size);
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+    transition: all ease .3s;
+}
+
+.nav_link:hover{
+    color: var(--first-color);
+}
+
+.nav_icon{
+    font-size: 1.2rem;
+}
+
+.nav_close{
+    position: absolute;
+    right: 1.3rem;
+    bottom: .5rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: var(--first-color);
+    transition: all ease .3s;
+}
+
+.nav_close:hover{
+    color: var(--first-color-alt);
+}
+
+.show-menu{
+    bottom: 0;
 }
