--- a/css/style.css
+++ b/css/style.css
@@ -764,3 +764,160 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
 .footer_social{
     color: #fff;
 }
+
+.active-link{
+    color: var(--first-color);
+}
+
+.scroll-header{
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
+}
+
+.scroll_up{
+    position: fixed;
+    right: 1rem;
+    bottom: 5rem;
+    background-color: var(--first-color);
+    opacity: .8;
+    padding: 0 .3rem;
+    border-radius: .4rem;
+    z-index: var(--z-tooltip);
+    transition: all ease .3s;
+}
+
+.scroll_up:hover{
+    color: white;
+}
+
+.scrollup_icon{
+    font-size: 1.5rem;
+    color: #fff;
+}
+
+.show-scroll{
+    bottom: 5rem;
+}
+
+.nav_btns{
+    display: flex;
+    align-items: center;
+}
+
+.change-theme{
+    font-size: 1.25rem;
+    color: var(--title-color);
+    margin-right: var(--mb-1);
+    cursor: pointer;
+    transition: all ease .3s;
+}
+
+.change-theme:hover{
+    color: var(--first-color);
+}
+
+body.dark-theme{
+    --title-color: hsl(250, 8%, 95%);
+    --text-color: hsl(250, 8%, 75%);
+    --input-color: hsl(250, 29%, 16%);
+    --body-color: hsl(250, 28%, 12%);
+    --container-color: hsl(250, 29%, 16%);
+    --scroll-bar-color: hsl(250, 12%, 48%);
+    --scroll-thumb-color: hsl(250, 12%, 36%);
+}
+
+::-webkit-scrollbar{
+    width: .60rem;
+    background-color: var(--scroll-bar-color);
+    border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--scroll-thumb-color);
+    border-radius: .5rem;
+    transition: all ease .3s;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--text-color-light);
+}
+
+@media screen and (max-width:350px){
+    .container{
+        margin-left: var(--mb-1);
+        margin-right: var(--mb-1);
+    }
+    .nav_menu{
+        padding: 2rem .25rem 4rem;
+    }
+    .nav_list{
+        column-gap: 0;
+    }
+    .home_content{
+        grid-template-columns: .25fr, 3fr;
+    }
+    .home_blob{
+        width: 180px;
+    }
+    .services_container{
+        grid-template-columns: max-content;
+        justify-content: center;
+    }
+    .services_content{
+        padding-right: 3.5rem;
+    }
+    .services_modal{
+        padding: 0 .5rem;
+    }
+    .project_img{
+        width: 200px;
+    }
+}
+
+@media screen and (min-width:568px){
+    .home_content{
+        grid-template-columns: max-content 1fr 1fr;
+    }
+    .home_data{
+        grid-column: initial;
+    }
+    .home_blob-img{
+        order: 1;
+        justify-self: center;
+    }
+    .about_container,
+    .portfolio_content,
+    .project_container,
+    .footer_container{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media screen and (min-width:768px){
+    .container{
+        margin-left: auto;
+        margin-right: auto;
+    }
+    body{
+        margin: 0;
+    }
+    .section{
+        padding: 6rem 0 2rem;
+    }
+    .section_subtitle{
+        margin-bottom: 4rem;
+    }
+    .header{
+        top: 0;
+        bottom: initial;
+    }
+    .header,
+    .main,
+    .footer_container{
+        padding: 0 1rem;
+    }
+
+    .nav{
+        height: calc(var(--header-height) + 1.5rem);
+        column-gap: 1rem;
+    }
+}
