--- a/css/style.css
+++ b/css/style.css
@@ -620,22 +620,6 @@ label.fcf-label {
     margin-bottom: 0.5rem;
 }
 
-.fcf-credit {
-    padding-top: 10px;
-    font-size: 0.9rem;
-    color: #545b62;
-}
-
-.fcf-credit a {
-    color: #545b62;
-    text-decoration: underline;
-}
-
-.fcf-credit a:hover {
-    color: #0056b3;
-    text-decoration: underline;
-}
-
 .fcf-btn {
     display: inline-block;
     font-weight: 400;
@@ -674,20 +658,21 @@ label.fcf-label {
 
 .fcf-btn-primary {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: var(--first-color);
+    border-color: var(--first-color);
+    transition: all ease .3s;
 }
 
 .fcf-btn-primary:hover {
     color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc;
+    background-color: var(--first-color-alt);
+    border-color: var(--first-color-alt);
 }
 
 .fcf-btn-primary:focus, .fcf-btn-primary.focus {
     color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc;
+    background-color: var(--first-color);
+    border-color: var(--first-color-alt);
     box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
 }
 
@@ -739,17 +724,22 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
     row-gap: 1.5rem;
 }
 
+.footer_link{
+    transition: all ease .3s;
+}
+
 .footer_link:hover{
-    color: var(--first-color-alt);
+    color: var(--first-color);
 }
 
 .footer_social{
     font-size: 1.25rem;
     margin-right: var(--mb-1-5);
+    transition: all ease .3s;
 }
 
 .footer_social:hover{
-    color: var(--first-color-alt);
+    color: var(--first-color);
 }
 
 .footer_copy{
@@ -915,9 +905,124 @@ body.dark-theme{
     .footer_container{
         padding: 0 1rem;
     }
-
     .nav{
         height: calc(var(--header-height) + 1.5rem);
         column-gap: 1rem;
+    }
+    .nav_icon,
+    .nav_close,
+    .nav_toggle{
+        display: none;
+    }
+    .nav_list{
+        display: flex;
+        column-gap: 2rem;
+    }
+    .nav_menu{
+        margin-left: auto;
+    }
+    .change-theme{
+        margin: 0;
+    }
+    .home_container{
+        row-gap: 5rem;
+    }
+    .home_content{
+        padding-top: 5.5rem;
+        column-gap: 2rem;
+    }
+    .home_blob{
+        width: 270px;
+    }
+    .about_container{
+        column-gap: 5rem;
+    }
+    .about_img{
+        width: 350px;
+    }
+    .about_description{
+        text-align: initial;
+    }
+    .about_info{
+        justify-content: space-between;
+    }
+    .services_container{
+        grid-template-columns: repeat(3, 218px);
+        justify-content: center;
+    }
+    .services_icon{
+        font-size: 2rem;
+    }
+    .services_content{
+        padding: 6rem 0 2rem 2.5rem;
+    }
+    .services_modal-content{
+        width: 450px;
+    }
+    .portfolio_img{
+        width: 320px;
+    }
+    .portfolio_content{
+        align-content: center;
+    }
+    .project{
+        text-align: initial;
+    }
+    .project_bg{
+        background: none;
+    }
+    .project_container{
+        border-radius: 1rem;
+        padding: 3rem 2.5rem 0;
+        grid-template-columns: 1fr max-content;
+        column-gap: 3rem;
+    }
+    .footer_container{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .footer_bg{
+        padding: 3rem 0 3.5rem;
+    }
+    .footer_links{
+        flex-direction: row;
+        column-gap: 2rem;
+    }
+    .footer_socials{
+        justify-self: flex-end;
+    }
+    .footer_copy{
+        margin-top: 4.5rem;
+    }
+}
+
+@media screen and (min-width:1024px){
+    .header,
+    .main,
+    .footer_container{
+        padding: 0;
+    }
+    .home_blob{
+        width: 320px;
+    }
+    .home_social{
+        transform: translateX(-6rem);
+    }
+    .services_container{
+        grid-template-columns: repeat(3, 238px);
+    }
+    .portfolio_content{
+        column-gap: 5rem;
+    }
+    .swiper-portfolio-icon{
+        font-size: 3.5rem;
+    }
+    .swiper-button-prev{
+        left: -3.5rem;
+    }
+    .swiper-button-next{
+        right: -3.5rem;
+    }
+    .swiper-container-horizontal > .swiper-pagination-bullets{
+        bottom: -4.5rem;
     }
 }
