--- a/css/style.css
+++ b/css/style.css
@@ -800,6 +800,29 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
     margin-top: var(--mb-1-5);
 }
 
+.price_list{
+    display: flex;
+    justify-content: space-between;
+}
+
+.row{
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(var(--bs-gutter-y) * -1);
+    margin-right: calc(var(--bs-gutter-x) * -.5);
+    margin-left: calc(var(--bs-gutter-x) * -.5);
+}
+
+.col{
+    flex: 1 0 0%;
+}
+
+.price_form{
+    background-color: var(--container-color);
+}
+
 .change-theme{
     font-size: 1.25rem;
     color: var(--title-color);
@@ -870,6 +893,13 @@ body.dark-theme{
     }
     .project_img{
         width: 200px;
+    }
+    .price_list{
+        display: block;
+        text-align: center;
+    }
+    .price_button{
+        margin-bottom: 15px;
     }
 }
 
